--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -15,6 +15,9 @@ android {
         versionName "1.0"
     }
 
+    applicationVariants.all { variant ->
+        variant.resValue "string", "versionName", variant.versionName }
+
     buildTypes {
         release {
             minifyEnabled true
