--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:required="true"/>
 
     <application
+            android:name=".PotatoApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/live_wallpaper_name"
