--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:theme="@style/AppTheme">
 
         <activity android:name=".PotatoActivity"
-                  android:theme="@style/AppTheme">
+                  android:theme="@style/AppTheme"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
