--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -3,21 +3,33 @@
           package="com.iven.potatowalls">
 
     <uses-permission android:name="android.permission.SET_WALLPAPER"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-feature
             android:name="android.software.live_wallpaper"
             android:required="true"/>
 
     <application
-            android:name=".PotatoApp"
-            android:allowBackup="true"
+            android:name="com.iven.potatowalls.PotatoApp"
+            android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/live_wallpaper_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".PotatoActivity"
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="@string/live_wallpaper_name"
+                android:exported="false"
+                android:grantUriPermissions="true">
+
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/provider_paths"/>
+        </provider>
+
+        <activity android:name="com.iven.potatowalls.PotatoActivity"
                   android:theme="@style/AppTheme"
                   android:screenOrientation="portrait">
             <intent-filter>
@@ -26,6 +38,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name="com.iven.potatowalls.SetWallpaperActivity"
+                  android:theme="@style/AppTheme"
+                  android:screenOrientation="portrait"/>
 
         <service
                 android:name="com.iven.potatowalls.PotateDaHomeLP"
@@ -37,7 +53,7 @@
 
             <meta-data
                     android:name="android.service.wallpaper"
-                    android:resource="@xml/potato_wallpaper"/>
+                    android:resource="@xml/vectorify_wallpaper"/>
         </service>
 
 
